<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_income_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="3"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_main_income"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_margin="8dp"
                        android:layout_gravity="center"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/income"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_income_by_ncategory"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_main_expense"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorWhite"
                android:background="@color/colorPrimaryDark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/expense"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_expense_by_ncategory"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main_category"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorWhite"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:src="@drawable/manage"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_category"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_total_profit"
        android:layout_below="@id/linear_income_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/total"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/main_total_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_transaksi"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_below="@id/linear_total_profit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fab_add"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/todo" />

</RelativeLayout>